use references/references.bib

--- a/training/references/references.bib
+++ b/training/references/references.bib
@@ -17,3 +17,34 @@
 }
 
 
+
+@article{sarma2016,
+	title = {Unit testing, model validation, and biological simulation},
+	author = {Sarma, Gopal P. and Jacobs, Travis W. and Watts, Mark D. and Ghayoomie, S. Vahid and Larson, Stephen D. and Gerkin, Richard C.},
+	year = {2016},
+	month = {08},
+	date = {2016-08-10},
+	journal = {F1000Research},
+	pages = {1946},
+	volume = {5},
+	doi = {10.12688/f1000research.9315.1},
+	url = {https://f1000research.com/articles/5-1946/v1},
+	langid = {en}
+}
+
+
+@article{barros2023,
+	title = {Empowering Ecological Modellers with a PERFICT Workflow: Seamlessly Linking Data, Parameterisation, Prediction, Validation and Visualisation},
+	author = {Barros, Ceres and Luo, Yong and Chubaty, Alex M. and Eddy, Ian M. S. and Micheletti, Tatiane and Boisvenue, {Céline} and Andison, David W. and Cumming, Steven G. and McIntire, Eliot J. B.},
+	year = {2023},
+	month = {01},
+	date = {2023-01},
+	journal = {Methods in Ecology and Evolution},
+	pages = {173--188},
+	volume = {14},
+	number = {1},
+	doi = {10.1111/2041-210X.14034},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/2041-210X.14034},
+	note = {image: https://besjournals.onlinelibrary.wiley.com/cms/asset/db13319c-88b4-4821-9eaa-a2e62364b399/mee314034-fig-0004-m.jpg},
+	langid = {en}
+}
