--- a/training/ModulesAndEvents.qmd
+++ b/training/ModulesAndEvents.qmd
@@ -3,6 +3,7 @@ author      : "Eliot McIntire"
 date        : last-modified
 editor_options:
   chunk_output_type: console
+bibliography: references/references.bib
 ---
 
 # Modules, Events and Functions {#sec-modseventsfuns}
