--- a/training/bestPractices.qmd
+++ b/training/bestPractices.qmd
@@ -100,8 +100,10 @@ SpaDES users and any R programmers in general.
 
 ## Best practices for SpaDES workflows
 
--   Don't make objects in `.GlobalEnv` -- instead, add default object
-    values to your module (e.g. via `.inputObjects`), or save them into
+-   limit the number of objects in `.GlobalEnv`. Instead, put them in 
+    functions -- such as with `setupProject` as arguments -- or inside a module. 
+    When objects are in modules, you can add default object
+    values (e.g. via `.inputObjects`), or save them into
     files that are loaded by `setupProject` or `simInit`. See
 
     1.  
