--- a/training/references/references.bib
+++ b/training/references/references.bib
@@ -48,3 +48,10 @@
 	note = {image: https://besjournals.onlinelibrary.wiley.com/cms/asset/db13319c-88b4-4821-9eaa-a2e62364b399/mee314034-fig-0004-m.jpg},
 	langid = {en}
 }
+
+@book{scheller2015,
+	title = {LANDIS-II Biomass Succession v3.2 Extension  {\textendash} User Guide},
+	author = {Scheller, Robert M. and Miranda, Brian R.},
+	year = {2015},
+	date = {2015}
+}
